# c15-45-ft-python-react

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup-project-env.sh
NoStoreBehind/: db.sqlite3  manage.py
NoStoreBehind/NoStoreBehind/: asgi.py  settings.py  settings_dev.py  urls.py  wsgi.py
NoStoreBehind/ecommerce/: admin.py  models.py  serializers.py  urls.py  views.py
NoStoreBehind/ecommerce/api/: serializers.py  urls.py  views.py
NoStoreBehind/ecommerce/migrations/: 0001_initial.py  0002_alter_purchase_orders_alter_purchase_total.py  0002_alter_shoppingcart_orders.py  0002_shop_logo_alter_productimages_image.py  0003_alter_shop_shop_name.py  0003_remove_product_images_remove_productimages_shop_and_more.py  0004_remove_productimages_product_product_images.py  0005_remove_product_images_productimages_product.py
NoStoreBehind/ecommerce/templates/ecommerce/: index.html  layout.html  login.html  register.html
NoStoreBehind/frontend/: .eslintrc.cjs  package-lock.json  package.json
NoStoreBehind/frontend/src/: middleware.ts
frontend/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: env.js  middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/cart/: page.tsx
frontend/src/auth/: auth.ts
frontend/src/components/: button-see-stores.tsx  dropdown-checkbox.tsx  filters.tsx  navbar.tsx  order-by.tsx  product-card.tsx  product-quantity.tsx  store-card.tsx
frontend/src/styles/: globals.css
nsb-commerce-venv/: pyvenv.cfg
nsb-commerce-venv/Scripts/: activate  activate.bat
(+27 files in other folders)
